# kenchidb

./: Cargo.toml  README.md  TODO.md
.github/workflows/: continuous-integration.yml
crates/btree/: Cargo.toml
crates/btree/src/: btree.rs  lib.rs
crates/btree/src/btree/: arena.rs  btree.rs  btree_delete.rs  btree_insert.rs  btree_search.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/common/: mod.rs
crates/db/src/schema/: mod.rs
crates/kenchidb/src/: main.rs
crates/storage/: Cargo.toml  build.rs
crates/storage/proto/: chunk_metadata.proto
crates/storage/src/: chunk.rs  chunk_i12n_margin.rs  chunk_impl.rs  chunk_impl_header_footer.rs  chunk_impl_margin.rs  data_util.rs  error.rs  file_store.rs  file_store_i12n.rs  lib.rs  page.rs  page_core.rs  page_impl.rs  storage_engine.rs
crates/storage/src/test/: chunk_impl_margin_test.rs  data_util_test.rs  mod.rs
src/: database.rs  error.rs  lib.rs  macros.rs  main.rs  schema.rs  value.rs
src/common/: error.rs  mod.rs
src/schema/: document.rs  value.rs
src/storage/: file_manager.rs  mod.rs  page.rs  paged_collection.rs
