[workspace]
# Use the newer version of the cargo resolver
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ioram Gordadze <Yoh0xFF@gmail.com>"]
license = "MIT"
description = "Strongly typed embedded document database"
repository = "https://github.com/yoh0xff/kenchidb"
homepage = "https://github.com/yoh0xff/kenchidb"
documentation = "https://github.com/yoh0xff/kenchidb"
readme = "README.md"
keywords = ["database", "embedded", "document", "nosql", "storage"]
categories = ["database-implementations", "embedded"]

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = "1.0.219"
serde_yaml = "0.9.33"
bitvec = "1.0.1"
bytes = "1.10.1"
prost = "0.14.1"
prost-build = "0.14.1"
protoc-bin-vendored = "3.0.0"

[workspace.lints.rust]
dead_code = "allow"

