[package]
name = "kenchidb"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Strongly typed embedded document database"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true
